# papiris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  contributors
docs/: CNAME  _config.yml  index.md
docs/_layouts/: default.html
src/: CommandParser.cpp  CommandParser.hpp  Crawler.cpp  Crawler.hpp  FileIndex.cpp  FileIndex.hpp  FileIndexDB.cpp  FileIndexDB.hpp  Iris.cpp  Iris.hpp  main.cpp
